--- a/hie.yaml
+++ b/hie.yaml
@@ -1,21 +1,36 @@
 cradle:
   cabal:
-    - path: "generators/app/LetExample.hs"
-      component: "panbench-generators:exe:let-example"
+    - path: "generators/./LetExample.hs"
+      component: "panbench-generators:exe:LetExample"
+
+    - path: "generators/./LetAddExample.hs"
+      component: "panbench-generators:exe:LetAddExample"
 
     - path: "site/app/Main.hs"
       component: "panbench-site:exe:site"
 
-    - path: "site/app/Panbench/Internal.hs"
+    - path: "site/app/Panbench/Shake/Benchmark.hs"
       component: "panbench-site:exe:site"
 
-    - path: "site/app/Panbench/HTML.hs"
+    - path: "site/app/Panbench/Shake/Dev.hs"
       component: "panbench-site:exe:site"
 
-    - path: "site/app/Panbench/Site/Shake.hs"
+    - path: "site/app/Panbench/Shake/File.hs"
       component: "panbench-site:exe:site"
 
-    - path: "site/app/Panbench/Vega.hs"
+    - path: "site/app/Panbench/Shake/HTML.hs"
+      component: "panbench-site:exe:site"
+
+    - path: "site/app/Panbench/Shake/Install/Agda.hs"
+      component: "panbench-site:exe:site"
+
+    - path: "site/app/Panbench/Shake/Lang.hs"
+      component: "panbench-site:exe:site"
+
+    - path: "site/app/Panbench/Shake/Matrix.hs"
+      component: "panbench-site:exe:site"
+
+    - path: "site/app/Panbench/Shake/Vega.hs"
       component: "panbench-site:exe:site"
 
     - path: "translators/src"
