wip: add shake helper for external build tools that use all cores

--- a/site/panbench-site.cabal
+++ b/site/panbench-site.cabal
@@ -31,6 +31,7 @@ executable site
         TypeFamilies
         TypeOperators
     other-modules:
+        Panbench.Shake.AllCores
         Panbench.Shake.Benchmark
         Panbench.Shake.Dev
         Panbench.Shake.File
