--- a/site/panbench-site.cabal
+++ b/site/panbench-site.cabal
@@ -40,6 +40,7 @@ executable site
         Panbench.Shake.Install.Agda
         Panbench.Shake.Install.Lean
         Panbench.Shake.Lang
+        Panbench.Shake.Make
         Panbench.Shake.Matrix
         Panbench.Shake.Vega
     build-depends:
