--- a/site/panbench-site.cabal
+++ b/site/panbench-site.cabal
@@ -42,6 +42,7 @@ executable site
         Panbench.Shake.Lang
         Panbench.Shake.Make
         Panbench.Shake.Matrix
+        Panbench.Shake.Store
         Panbench.Shake.Vega
     build-depends:
         base >=4.17.2.0,
@@ -50,6 +51,7 @@ executable site
         blaze-html >= 0.9,
         bytestring >= 0.12,
         containers >= 0.6,
+        cryptohash-sha256 >= 0.11,
         directory >= 1.3,
         filepath >= 1.5,
         hvega >= 0.12,
