--- a/site/panbench-site.cabal
+++ b/site/panbench-site.cabal
@@ -41,6 +41,7 @@ executable site
         Panbench.Shake.Install.Agda
         Panbench.Shake.Install.Idris
         Panbench.Shake.Install.Lean
+        Panbench.Shake.Install.Rocq
         Panbench.Shake.Lang
         Panbench.Shake.Make
         Panbench.Shake.Matrix
