chore: update hie file, add missing imports

--- a/hie.yaml
+++ b/hie.yaml
@@ -18,6 +18,9 @@ cradle:
     - path: "site/app/Panbench/Shake/Dev.hs"
       component: "panbench-site:exe:site"
 
+    - path: "site/app/Panbench/Shake/Env.hs"
+      component: "panbench-site:exe:site"
+
     - path: "site/app/Panbench/Shake/File.hs"
       component: "panbench-site:exe:site"
 
@@ -30,13 +33,28 @@ cradle:
     - path: "site/app/Panbench/Shake/Install/Agda.hs"
       component: "panbench-site:exe:site"
 
+    - path: "site/app/Panbench/Shake/Install/Idris.hs"
+      component: "panbench-site:exe:site"
+
     - path: "site/app/Panbench/Shake/Install/Lean.hs"
+      component: "panbench-site:exe:site"
+
+    - path: "site/app/Panbench/Shake/Install/Rocq.hs"
       component: "panbench-site:exe:site"
 
     - path: "site/app/Panbench/Shake/Lang.hs"
       component: "panbench-site:exe:site"
 
+    - path: "site/app/Panbench/Shake/Make.hs"
+      component: "panbench-site:exe:site"
+
     - path: "site/app/Panbench/Shake/Matrix.hs"
+      component: "panbench-site:exe:site"
+
+    - path: "site/app/Panbench/Shake/Opam.hs"
+      component: "panbench-site:exe:site"
+
+    - path: "site/app/Panbench/Shake/Store.hs"
       component: "panbench-site:exe:site"
 
     - path: "site/app/Panbench/Shake/Vega.hs"
