refactor: pull out sha-256 digest utils into its own file

--- a/site/panbench-site.cabal
+++ b/site/panbench-site.cabal
@@ -34,6 +34,7 @@ executable site
         Panbench.Shake.AllCores
         Panbench.Shake.Benchmark
         Panbench.Shake.Dev
+        Panbench.Shake.Digest
         Panbench.Shake.Env
         Panbench.Shake.File
         Panbench.Shake.Git
