--- a/hie.yaml
+++ b/hie.yaml
@@ -18,6 +18,9 @@ cradle:
     - path: "site/app/Panbench/Shake/Dev.hs"
       component: "panbench-site:exe:site"
 
+    - path: "site/app/Panbench/Shake/Digest.hs"
+      component: "panbench-site:exe:site"
+
     - path: "site/app/Panbench/Shake/Env.hs"
       component: "panbench-site:exe:site"
 
