fix: add rules for finding chez
Debian installs chez as chezscheme, so we need to search for both
'chez' and 'chezscheme' when building idris.

--- a/hie.yaml
+++ b/hie.yaml
@@ -15,6 +15,9 @@ cradle:
     - path: "site/app/Panbench/Shake/Benchmark.hs"
       component: "panbench-site:exe:site"
 
+    - path: "site/app/Panbench/Shake/Chez.hs"
+      component: "panbench-site:exe:site"
+
     - path: "site/app/Panbench/Shake/Dev.hs"
       component: "panbench-site:exe:site"
 
