fix: fix bug where rocq ./configure couldn't find dune

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -106,7 +106,7 @@ jobs:
           restore-keys: ${{ env.key }}-
 
       - name: Build 🛠️
-        run: cabal run panbench-site -- _build/site/index.html
+        run: cabal run panbench-site -- install-rocq
 
       - name: Cache store 💾
         uses: actions/cache/save@v4
