use GeneralizedNewtypeDeriving from Semigroup and Monoid

--- a/translators/translators.cabal
+++ b/translators/translators.cabal
@@ -19,6 +19,7 @@ common extensions
        DeriveAnyClass,
        DeriveGeneric,
        DerivingStrategies,
+       GeneralizedNewtypeDeriving,
        ImportQualifiedPost,
        LambdaCase,
        OverloadedStrings
