wip: rethink generators

--- a/panbench/hie.yaml
+++ b/panbench/hie.yaml
@@ -1,10 +1,7 @@
 cradle:
   cabal:
-    - path: "generators/app/LetExample.hs"
-      component: "panbench-generators:exe:LetExample"
-
-    - path: "generators/app/LetAddExample.hs"
-      component: "panbench-generators:exe:LetAddExample"
+    - path: "generators/app"
+      component: "lib:panbench-generators"
 
     - path: "site/app/Main.hs"
       component: "panbench-site:exe:site"
