--- a/panbench/generators/panbench-generators.cabal
+++ b/panbench/generators/panbench-generators.cabal
@@ -9,8 +9,10 @@ category:           Language
 build-type:         Simple
 extra-doc-files:    CHANGELOG.md
 
-common generator
+library
     ghc-options: -Wall
+    exposed-modules:
+      LetAddExample
     build-depends:
         base >=4.17.2.0,
         text >= 2.1 && <3.0,
@@ -22,10 +24,10 @@ common generator
         ImportQualifiedPost
         OverloadedStrings
 
-executable LetExample
-    import:           generator
-    main-is:          LetExample.hs
+-- executable LetExample
+--     import:           generator
+--     main-is:          LetExample.hs
 
-executable LetAddExample
-    import:           generator
-    main-is:          LetAddExample.hs
+-- executable LetAddExample
+--     import:           generator
+--     main-is:          LetAddExample.hs
