--- a/panbench/generators/panbench-generators.cabal
+++ b/panbench/generators/panbench-generators.cabal
@@ -9,25 +9,57 @@ category:           Language
 build-type:         Simple
 extra-doc-files:    CHANGELOG.md
 
+common warnings
+    ghc-options: -Wall -Wno-name-shadowing
+
+common extensions
+     default-extensions:
+       BlockArguments,
+       DeriveAnyClass,
+       DeriveGeneric,
+       DerivingStrategies,
+       GeneralizedNewtypeDeriving,
+       ImportQualifiedPost,
+       LambdaCase,
+       OverloadedStrings
+
 library
-    ghc-options: -Wall
+    import: warnings, extensions
     exposed-modules:
-      LetAddExample
+        Panbench.Generator
+        Panbench.Generator.NestedLetAdditions
     build-depends:
         base >=4.17.2.0,
         text >= 2.1 && <3.0,
         panbench-grammar
-    hs-source-dirs:   app
+    hs-source-dirs: src
     default-language: Haskell2010
     default-extensions:
         BlockArguments
         ImportQualifiedPost
         OverloadedStrings
 
--- executable LetExample
---     import:           generator
---     main-is:          LetExample.hs
-
--- executable LetAddExample
---     import:           generator
---     main-is:          LetAddExample.hs
+test-suite panbench-generators
+    import: warnings, extensions
+    main-is: Main.hs
+    other-modules:
+        Golden.Util.File
+    build-depends:
+        base >=4.17.2.0,
+        containers >= 0.6 && < 0.7,
+        prettyprinter >=1.7.1 && < 2.0,
+        text >= 2.1 && < 3.0,
+        directory >= 1.3,
+        filepath >= 1.5,
+        tasty >= 1.5,
+        tasty-golden >= 2.3,
+        panbench-generators,
+        panbench-grammar,
+    if os(windows)
+        build-depends: Win32 >= 2.12
+    else
+        build-depends: unix  >= 2.8
+    hs-source-dirs: test/golden
+    type: exitcode-stdio-1.0
+    default-language: Haskell2010
+    
