--- a/panbench/grammar/panbench-grammar.cabal
+++ b/panbench/grammar/panbench-grammar.cabal
@@ -31,6 +31,9 @@ library
         Panbench.Data.List.Bwd,
         Panbench.Grammar,
         Panbench.Grammar.Agda,
+        Panbench.Grammar.Rocq,
+        Panbench.Grammar.Idris,
+        Panbench.Grammar.Lean,
         Panbench.Lang,
         Panbench.Pretty,
         Panbench,
@@ -44,6 +47,7 @@ library
         base >=4.17.2.0,
         aeson >= 2.2,
         binary >= 0.8,
+        data-default >= 0.8,
         deepseq >= 1.4,
         hashable >= 1.4,
         optparse-applicative >= 0.19,
