wip: generators galore

--- a/panbench/generators/panbench-generators.cabal
+++ b/panbench/generators/panbench-generators.cabal
@@ -27,7 +27,21 @@ library
     import: warnings, extensions
     exposed-modules:
         Panbench.Generator
+        Panbench.Generator.NestedLet
         Panbench.Generator.NestedLetAdditions
+        Panbench.Generator.NestedLetFunctions
+        Panbench.Generator.SimpleDataDefinitions
+        Panbench.Generator.LargeDependentRecord
+        Panbench.Generator.SequentialDependentRecords
+        Panbench.Generator.RecordParameters
+        Panbench.Generator.Newlines
+        Panbench.Generator.LargeSimpleRecord
+        Panbench.Generator.SequentialSimpleRecords
+        Panbench.Generator.LargeSimpleDatatype
+        Panbench.Generator.DatatypeParameters
+        Panbench.Generator.SequentialDefinitions
+        Panbench.Generator.LargeIndexedDatatype
+        Panbench.Generator.LargeIndexedParameterisedDatatype
     build-depends:
         base >=4.17.2.0,
         text >= 2.1 && <3.0,
