--- a/panbench/grammar/panbench-grammar.cabal
+++ b/panbench/grammar/panbench-grammar.cabal
@@ -30,10 +30,10 @@ library
         Grammar,
         Panbench.Data.List.Bwd,
         Panbench.Grammar,
-        Panbench.Grammar.Agda,
-        Panbench.Grammar.Rocq,
-        Panbench.Grammar.Idris,
-        Panbench.Grammar.Lean,
+        -- Panbench.Grammar.Agda,
+        -- Panbench.Grammar.Rocq,
+        -- Panbench.Grammar.Idris,
+        -- Panbench.Grammar.Lean,
         Panbench.Lang,
         Panbench.Pretty,
         Panbench,
