wip: re-enable all grammars

--- a/panbench/grammar/panbench-grammar.cabal
+++ b/panbench/grammar/panbench-grammar.cabal
@@ -32,9 +32,9 @@ library
         Panbench.Grammar,
         Panbench.Grammar.Agda,
         Panbench.Grammar.Cell,
-        -- Panbench.Grammar.Rocq,
-        -- Panbench.Grammar.Idris,
-        -- Panbench.Grammar.Lean,
+        Panbench.Grammar.Rocq,
+        Panbench.Grammar.Idris,
+        Panbench.Grammar.Lean,
         Panbench.Lang,
         Panbench.Pretty,
         Panbench,
