--- a/panbench/generators/panbench-generators.cabal
+++ b/panbench/generators/panbench-generators.cabal
@@ -65,6 +65,7 @@ test-suite panbench-generators
         Golden.Util.File
     build-depends:
         base >=4.17.2.0,
+        bytestring >=0.10.4 && <0.13,
         containers >= 0.6 && < 0.7,
         prettyprinter >=1.7.1 && < 2.0,
         text >= 2.1 && < 3.0,
