--- a/.github/workflows/golden.yml
+++ b/.github/workflows/golden.yml
@@ -10,7 +10,8 @@ jobs:
     strategy:
       matrix:
         ghc-version: ['9.12.2']
-        cabal-version: ['latest']
+        cabal-version: ['3.14.2.0']
+        cabal-update: false
         os: [ubuntu-latest, macOS-latest]
     steps:
       - name: Checkout ⬇️
