--- a/.github/workflows/golden.yml
+++ b/.github/workflows/golden.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         ghc-version: ['9.12.2']
         cabal-version: ['3.14.2.0']
-        cabal-update: false
+        cabal-update: 'false'
         os: [ubuntu-latest, macOS-latest]
     steps:
       - name: Checkout ⬇️
