--- a/.github/workflows/golden.yml
+++ b/.github/workflows/golden.yml
@@ -11,7 +11,6 @@ jobs:
       matrix:
         ghc-version: ['9.12.2']
         cabal-version: ['3.14.2.0']
-        cabal-update: 'false'
         os: [ubuntu-latest, macOS-latest]
     steps:
       - name: Checkout ⬇️
@@ -60,6 +59,7 @@ jobs:
         with:
           ghc-version: ${{ matrix.ghc-version }}
           cabal-version: ${{ matrix.cabal-version }}
+          cabal-update: false
 
       - name: Cache ghcup 💾
         uses: actions/cache/save@v4
