--- a/cabal.project
+++ b/cabal.project
@@ -5,7 +5,7 @@ jobs: $ncpus
 if(impl(ghc >= 9.12.0))
   source-repository-package
       type: git
-      location: git@github.com:ndmitchell/shake.git
+      location: https://github.com/ndmitchell/shake.git
       tag: c69037e5e2d150bcb79be366d081688ad00e4c71
 
 packages:
