--- a/panbench/site/panbench-site.cabal
+++ b/panbench/site/panbench-site.cabal
@@ -61,6 +61,7 @@ executable site
         directory >= 1.3,
         filepath >= 1.5,
         hvega >= 0.12,
+        process >= 1.1,
         shake >= 0.19,
         text >= 2.1 && < 3.0,
         time >= 1.12,
