--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,5 +1,5 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+# Simple workflow for building static content
+name: Build static site
 
 on:
   # Runs on pushes targeting the default branch
@@ -8,12 +8,6 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
@@ -120,11 +114,8 @@ jobs:
           key: ${{ steps.store-cache.outputs.cache-primary-key }}
 
       - name: Upload artifact ⬆️
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           # Upload entire repository
+          name: 'static-site'
           path: '_build/site'
-
-      - name: Deploy to GitHub Pages 📖
-        id: deployment
-        uses: actions/deploy-pages@v4
