--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,11 +9,14 @@ on:
     types:
       - completed
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Sets permissions of the GITHUB_TOKEN to allow us to:
+# - Deploy to GH pages
+# - Read artifacts from other workflows
 permissions:
   contents: read
   pages: write
   id-token: write
+  actions: read
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
@@ -44,8 +47,10 @@ jobs:
       - name: Download latest build of site ⬇️
         uses: actions/download-artifact@v5
         with:
+          github-token: ${{ secrets.GH_PAT }}
           name: 'static-site'
           path: 'site'
+          run-id: ${{ github.event.workflow_run.id }}
 
       - name: Upload site ⬆️
         uses: actions/upload-pages-artifact@v3
